# drf-vcr2

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: package_ci.yml  sample_project_ci.yml  test_sample_project.yml
drf_snap_testing/: bit.py  settings.py  snap.py  testcase.py
drf_snap_testing/bits/: __init__.py  database_diff.py  freezegun.py  func.py  mailbox.py  queries.py  response.py  starter.py  test_info.py  thing.py  vcr.py
drf_snap_testing/serializers/: __init__.py  base.py  database_diff.py  fields.py  mailbox.py  query.py  response.py  testinfo.py
drf_vcr/: declarative.py
sample_project/: manage.py  pyproject.toml
sample_project/sample_project/: settings.py  urls.py
sample_project/snippets/: apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
sample_project/snippets/migrations/: 0001_initial.py  0002_create_users.py  0003_create_snippets.py
sample_project/snippets/tests/SnippetDelete/test_snippet_delete/: databasediff.yaml  mailbox.yaml  queries.yaml  response.yaml  testinfo.yaml  vcr.yaml
sample_project/snippets/tests/SnippetTest/test_snippet_post_authed/: queries.yaml  response.yaml  testinfo.yaml
sample_project/snippets/tests/SnippetTest/test_snippet_post_authed_db_diff/: databasediff.yaml  response.yaml  testinfo.yaml
sample_project/snippets/tests/UserList/test_user_list_anon/: response.yaml  testinfo.yaml
sample_project/snippets/tests/UserList/test_user_list_anon2/: queries.yaml  response.yaml  testinfo.yaml
tests/: tests.py
