[tool.poetry]
name = "drf-vcr"
version = "0.1.0"
description = ""
authors = ["Xavier Francisco <xavier.n.francisco@gmail.com>"]
readme = "README.md"
packages = [
    { include = "drf_vcr" },
]


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
django-stubs = "^1.13.0"
djangorestframework-stubs = "^1.8.0"
pylint = "^2.15.7"
flake8 = "^6.0.0"
isort = "^5.10.1"
absolufy-imports = "^0.3.1"

[tool.pytest.ini_options]
python_files = ["tests/*test*.py"]

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
strict = true
disallow_subclassing_any = false

[tool.pylint.messages_control]
enable = "useless-suppression"
disable = """
  missing-function-docstring,
  missing-module-docstring,
  missing-class-docstring,
  unsubscriptable-object,
  useless-super-delegation
"""

[tool.pylint.similarities]
min-similarity-lines=10
ignore-imports=true
ignore-comments=false
ignore-docstrings=false
ignore-signatures=false

[tool.pylint.design]
max-parents=12
max-attributes=12
min-public-methods=0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
