[tool.poetry]
name = "sample_project"
version = "0.1.0"
description = ""
authors = ["Xavier Francisco <xavier.n.francisco@gmail.com>"]
readme = "README.md"
packages = [
    { include = "sample_project" },
    { include = "snippets" },
]


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.24.2"
pygments = "^2.13.0"
django-stubs-ext = "^0.7.0"
drf-vcr = {path = ".."}

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"
types-pygments = "^2.13.1.1"
pylint = "^2.15.7"
pylint-django = "^2.5.3"
pytest = "^7.2.0"
pytest-django = "^4.5.2"
mypy = "^0.991"
django-stubs = "^1.13.0"
djangorestframework-stubs = "^1.8.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
absolufy-imports = "^0.3.1"

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
strict = true
disallow_subclassing_any = false
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]

[tool.pylint.master]
init-hook="""
import os, sys
sys.path.append(os.path.dirname('.'))
"""
load-plugins = "pylint_django"
django-settings-module="sample_project.settings"
ignore = """
  migrations
"""

[tool.pylint.messages_control]
enable = "useless-suppression"
disable = """
  missing-function-docstring,
  missing-module-docstring,
  missing-class-docstring,
  unsubscriptable-object,
  useless-super-delegation
"""

[tool.pylint.design]
max-parents=12
max-attributes=12
min-public-methods=0

[tool.django-stubs]
django_settings_module = "sample_project.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
